<resources>
    <string name="app_name">NotesApp</string>
    <string name="welcome_string">Hello! Login or register</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login_button">Login</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="signUp">Sign Up</string>
    <string name="register_string">Register</string>
    <string name="fullName">Full Name:</string>
    <string name="register_button">Register</string>
    <string name="already_registered">Already registered? Sign in!</string>
    <string-array name="categories_array">
        <item>Selecteaza o categorie</item>
        <item>Personal</item>
        <item>Munca</item>
        <item>Studiu</item>
        <item>Altele</item>
    </string-array>
</resources>