<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test5"
    tools:context=".Activities.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:backgroundTint="#2b2122"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/registerActivity_tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/register_string"
                android:textColor="@color/white"
                android:textSize="35dp" />

            <EditText
                android:id="@+id/registerActivity_et_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/registerActivity_tv_register"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="#70ca5800"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/registerActivity_et_FullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/registerActivity_et_Email"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="#70ca5800"
                android:drawablePadding="10dp"
                android:hint="@string/fullName"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/registerActivity_et_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/registerActivity_et_FullName"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="#70ca5800"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/registerActivity_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/registerActivity_et_Password"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:backgroundTint="#d25d00"
                android:text="@string/register_button"
                android:textColor="@color/white"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/registerActivity_tv_AlreadyRegistered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/registerActivity_btn_register"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:padding="1dp"
                android:text="@string/already_registered"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>